# aquaticlife

./: .gitignore  Makefile  README.md  pyproject.toml
aquaticlife/: __init__.py
aquaticlife/control/: __init__.py  controller.py
aquaticlife/envs/: __init__.py  swim_env.py
aquaticlife/evolution/: __init__.py  ga.py
aquaticlife/experiments/: __init__.py  loops.py
aquaticlife/physics/: __init__.py  body.py  fluid.py
aquaticlife/rl/: __init__.py  ppo.py
aquaticlife/utils/: __init__.py  logging.py
aquaticlife/visualization/: __init__.py  pygame_viewer.py
configs/: base.yaml
docs/: next_steps.md  projet.md
scripts/: evolve.py  train_rl.py  viewer.py
tests/: test_kinematics.py  test_reward.py
